# metis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  config.yaml  pyproject.toml  skill.json
config/: models.json
scripts/: poll_issues.py
src/metis/: AGENTS.md  __init__.py  config.py
src/metis/api/: __init__.py
src/metis/api/templates/: index.html
src/metis/cli/: __init__.py  __main__.py
src/metis/fetchers/: __init__.py  platform.py
src/metis/llm/: __init__.py  models.py  providers.py
src/metis/processors/: __init__.py  formatter.py  translation.py
src/metis/storage/: __init__.py  database.py
src/metis/workflow/: __init__.py
tests/: test_config.py  test_llm.py  test_platform.py  test_processors.py  test_storage.py
